前台首页跟商品详情页可以显示

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -28,4 +28,8 @@
   	<filter-name>struts2</filter-name>
   	<url-pattern>*.action</url-pattern>
   </filter-mapping>
+  
+  <listener>
+  	<listener-class>com.deviser.shop.listener.InitDataListener</listener-class>
+  </listener>
 </web-app>
